@@ -1,1 +1,5 @@
-SUBDIRS = local jwt
+SUBDIRS = local
+
+if WITH_JWT
+SUBDIRS += jwt
+endif
